--- a/background-color.html
+++ b/background-color.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>background-color</title>
-        <link href="css/backgroundColor.css" type="text/css" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Никола Те́сла</h1>
-        <p>Никола Те́сла (серб. Никола Те́сла, англ. Nikola Tesla; 10 июля 1856, Смилян, Госпич, Австрийская империя — 7 января 1943, Нью-Йорк, Нью-Йорк, США)</p>
-        <h2>Примечания:</h2>
-        <uL>
-            <li>Тесла — по-сербски и на многих славянских языках значит плотник</li>
-            <li> Первую статью о Н. Тесле Б. Н. Ржонсницкий опубликовал в 1956 году.</li>
-            <li> «Tesla Says Edison was an Empiricist. Electrical Technician Declares Persistent Trials Attested Inventor’s Vigor. 'His Method Inefficient' A Little Theory Would Have Saved Him 90 % of Labor, Ex-Aide Asserts. Praises His Great Genius.», New York Times, October 19, 1931. «Nikola Tesla, one of the world’s outstanding electrical technicians, who came to America in 1884 to work with Thomas A. Edison, specifically in the designing of motors and generators, recounted yesterday some of …»</li>
-            <li>В статье «Тунгусский метеорит и время: 101-я гипотеза тайны века» временем появления этой гипотезы считается 1996 год (автором идеи называется предсказатель Манфред Димде), тогда как в статье ТУНГУСКА::ПРОБЛЕМА::ГИПОТЕЗЫ[32] утверждается, что идея прозвучала в 2000 году в телепередаче Александра Гордона</li>
-        </uL>
+
+<head>
+    <title>background-color</title>
+    <link href="css/backgroundColor.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+    <h1>Никола Те́сла</h1>
+    <p>Никола Те́сла (серб. Никола Те́сла, англ. Nikola Tesla; 10 июля 1856, Смилян, Госпич, Австрийская империя — 7
+        января 1943, Нью-Йорк, Нью-Йорк, США)</p>
+    <h2>Примечания:</h2>
+    <uL>
+        <li>Тесла — по-сербски и на многих славянских языках значит плотник</li>
+        <li> Первую статью о Н. Тесле Б. Н. Ржонсницкий опубликовал в 1956 году.</li>
+        <li> «Tesla Says Edison was an Empiricist. Electrical Technician Declares Persistent Trials Attested Inventor’s
+            Vigor. 'His Method Inefficient' A Little Theory Would Have Saved Him 90 % of Labor, Ex-Aide Asserts. Praises
+            His Great Genius.», New York Times, October 19, 1931. «Nikola Tesla, one of the world’s outstanding
+            electrical technicians, who came to America in 1884 to work with Thomas A. Edison, specifically in the
+            designing of motors and generators, recounted yesterday some of …»</li>
+        <li>В статье «Тунгусский метеорит и время: 101-я гипотеза тайны века» временем появления этой гипотезы считается
+            1996 год (автором идеи называется предсказатель Манфред Димде), тогда как в статье
+            ТУНГУСКА::ПРОБЛЕМА::ГИПОТЕЗЫ[32] утверждается, что идея прозвучала в 2000 году в телепередаче Александра
+            Гордона</li>
+    </uL>
     </body>
+
 </html>
